--- a/index.html
+++ b/index.html
@@ -1,10 +1,98 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thesis AI</title>
+    
+    <!-- SEO Meta Tags (v2) -->
+    <title>60-Second Unicorn | AI Startup Idea Generator & Analyzer</title>
+    <meta name="description" content="Get a data-driven startup idea in 60 seconds. Our AI analyzes markets, scores potential, and generates a complete business plan for your next unicorn." />
+    <meta name="keywords" content="AI startup generator, business idea analysis, unicorn score, market validation tool, SaaS ideas, product roadmap AI" />
+    <link rel="canonical" href="[YOUR_APP_URL]" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="[YOUR_APP_URL]" />
+    <meta property="og:title" content="60-Second Unicorn | Turn Your Intuition Into a Business Plan" />
+    <meta property="og:description" content="I just got a million-dollar startup idea, complete with market analysis and a unicorn score. Discover yours in 60 seconds." />
+    <meta property="og:image" content="[URL_TO_YOUR_OG_IMAGE.png]" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="[YOUR_APP_URL]" />
+    <meta property="twitter:title" content="60-Second Unicorn | Turn Your Intuition Into a Business Plan" />
+    <meta property="twitter:description" content="I just got a million-dollar startup idea, complete with market analysis and a unicorn score. Discover yours in 60 seconds." />
+    <meta property="twitter:image" content="[URL_TO_YOUR_TWITTER_IMAGE.png]" />
+
+    <!-- Hreflang for different languages -->
+    <link rel="alternate" hreflang="en" href="[YOUR_APP_URL]" />
+    <link rel="alternate" hreflang="pt" href="[YOUR_APP_URL]/pt" />
+    <link rel="alternate" hreflang="es" href="[YOUR_APP_URL]/es" />
+    <link rel="alternate" hreflang="x-default" href="[YOUR_APP_URL]" />
+
+    <!-- Favicon (é importante ter um) -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- **NOVO: JSON-LD Schema for AEO & LLMO** -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "SoftwareApplication",
+          "name": "60-Second Unicorn",
+          "applicationCategory": "BusinessApplication",
+          "operatingSystem": "Web",
+          "description": "An AI-powered tool that generates and analyzes startup ideas, providing market analysis, a potential score, and a business roadmap in 60 seconds.",
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "USD"
+          },
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.9",
+            "reviewCount": "150" 
+          },
+          "author": {
+            "@type": "Organization",
+            "name": "60-Second Unicorn"
+          }
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "How to find a good startup idea?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "60-Second Unicorn helps you find and validate a startup idea in just 60 seconds. Simply answer three questions about your interests, skills, and ambitions, and our AI will generate a complete business analysis, including market potential and a unicorn score."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "How to analyze a business idea?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "Our AI Oracle performs a deep strategic analysis, including market deconstruction, competitive landscape mapping (PESTEL, Porter's Five Forces), and business modeling (Lean Canvas, Hook Model) to provide a comprehensive analysis and a 'Unicorn Score' for your business idea."
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "What is a unicorn score?",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "The Unicorn Score is a rating from 0-100 that evaluates your startup idea based on market potential, competitive advantage, and execution feasibility. It's a data-driven indicator to help you decide which ideas to pursue."
+              }
+            }
+          ]
+        }
+      ]
+    }
+    </script>
+
+    <!-- O resto do head (fonts, tailwind, etc.) permanece o mesmo -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +136,8 @@
 </script>
 </head>
   <body class="bg-brand-dark">
-    <div id="root"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <main id="root"></main>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
