--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <title>60-Second Unicorn | AI Startup Idea Generator & Analyzer</title>
     <meta name="description" content="Get a data-driven startup idea in 60 seconds. Our AI analyzes markets, scores potential, and generates a complete business plan for your next unicorn." />
     <meta name="keywords" content="AI startup generator, business idea analysis, unicorn score, market validation tool, SaaS ideas, product roadmap AI" />
-    <link rel="canonical" href="[YOUR_APP_URL]" />
+    <link rel="canonical" href="https://unicorn60.com" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="[YOUR_APP_URL]" />
+    <meta property="og:url" content="https://unicorn60.com" />
     <meta property="og:title" content="60-Second Unicorn | Turn Your Intuition Into a Business Plan" />
     <meta property="og:description" content="I just got a million-dollar startup idea, complete with market analysis and a unicorn score. Discover yours in 60 seconds." />
     <meta property="og:image" content="[URL_TO_YOUR_OG_IMAGE.png]" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="[YOUR_APP_URL]" />
+    <meta property="twitter:url" content="https://unicorn60.com" />
     <meta property="twitter:title" content="60-Second Unicorn | Turn Your Intuition Into a Business Plan" />
     <meta property="twitter:description" content="I just got a million-dollar startup idea, complete with market analysis and a unicorn score. Discover yours in 60 seconds." />
     <meta property="twitter:image" content="[URL_TO_YOUR_TWITTER_IMAGE.png]" />
 
     <!-- Hreflang for different languages -->
-    <link rel="alternate" hreflang="en" href="[YOUR_APP_URL]" />
-    <link rel="alternate" hreflang="pt" href="[YOUR_APP_URL]/pt" />
-    <link rel="alternate" hreflang="es" href="[YOUR_APP_URL]/es" />
-    <link rel="alternate" hreflang="x-default" href="[YOUR_APP_URL]" />
+    <link rel="alternate" hreflang="en" href="https://unicorn60.com" />
+    <link rel="alternate" hreflang="pt" href="https://unicorn60.com/pt" />
+    <link rel="alternate" hreflang="es" href="https://unicorn60.com/es" />
+    <link rel="alternate" hreflang="x-default" href="https://unicorn60.com" />
 
     <!-- Favicon (é importante ter um) -->
     <link rel="icon" href="/favicon.ico" />
